k8s/apps/internal/dev-environment/jpdesigns-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jpdesigns-site
  namespace: dev-environment
spec:
  selector:
    matchLabels:
      app: jpdesigns-site
  template:
    metadata:
      labels:
        app: jpdesigns-site
    spec:
      containers:
        - name: jpdesigns-site
          image: registry.oplabs.us:5050/root/new-jp-designs:dev-63 # {"$imagepolicy": "flux-system:jpdesigns-site"}
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3000
