k8s/apps/internal/dev-environment/jpdesigns-site/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jpdesigns-site
  namespace: dev-environment
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://dev.paintbyjpdesigns.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "JP Designs Dev Site"
    gethomepage.dev/description: "Development site for JP Designs"
    gethomepage.dev/group: "JP Designs"
    gethomepage.dev/icon: "nodejs.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.paintbyjpdesigns.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        # - name: jpdesigns-site-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        - name: local-ip-list
          namespace: traefik
        - name: oauth-forward-auth
          namespace: traefik
        - name: oauth-headers
          namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: jpdesigns-site
          port: 8080
  tls:
    secretName: paintbyjpdesigns-tls # give it the ole tls cert

---
# Authenticated requests to /oauth2/ will be forwarded to the oauth-proxy service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-proxy-path-jpdesigns
  namespace: dev-environment
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure # or websecure for HTTPS
  routes:
    - match: Host(`dev.paintbyjpdesigns.com`) && PathPrefix(`/oauth2/`) # Replace with your domain
      kind: Rule
      services:
        - name: oauth-proxy
          port: 4180
      # middlewares:
      #   - name: crowdsec-bouncer
      #     namespace: traefik
  # Uncomment and configure for HTTPS
  tls:
    secretName: paintbyjpdesigns-tls
---
# We already have this resource in the namespace no need to add it again

# # add externalName service for oauth-proxy
# apiVersion: v1
# kind: Service
# metadata:
#   name: oauth-proxy
#   namespace: dev-environment
# spec:
#   type: ExternalName
#   externalName: oauth-proxy.ms-sso.svc.cluster.local
#   ports:
#     - name: http
#       port: 4180
#       targetPort: 4180
